Adding support for multiple languages